- Improve error checking when saving TIFF images (Brian Delalex, #23214).
- Fix crash in wxLogGui when wxUSE_LOG_DIALOG==0 (Randalphwa, #24087).
- Use wxUILocale in wxFloatProperty (Miguel Gimenez, Artur Wieczorek, #24140).
- Fix crash in wxImage::InitAlpha() if image is invalid (Randalphwa, #24260).
- Fix wxLogStatus() when wxNO_IMPLICIT_WXSTRING_ENCODING is defined (#24267).

wxGTK:

- Fix alpha in bitmaps created from SVG (Tim Eliseo, #24064).
- Improve desktop environment detection, notably under Wayland (#24050).
- Fix wxSystemSettings::GetMetric() scrollbar width calculation for GTK3 (#24057).
- Minimal wxVideoMode support for Wayland (#24021).
- Fix wxCheckBox::SetValue() when in undetermined state (#24074).
- Fix for incorrect preferred size from empty wxChoice with GTK3 (#23382).
- wxDropSource::GiveFeedback() fixes (#24051).
- Fix wxCheckBox undetermined state showing as checked with some themes (#24074).
- Fix crash with GTK3 if console program is using a GUI wxApp class (#24081).
- Generic wxDataViewCtrl drag hint fixes (#24084).
- Ensure wxListBox best size is at least the minimum required by GTK3.
- Support setting thickness when creating wxGauge with GTK >= 3.20 (#24107).

wxMSW:

- Add support for line spacing and bullet style attributes to wxTextCtrl
  (Blake-Madden, #24046, #24069).
- Fix possible crash in wxFileSystemWatcher (Rick van der Sluijs, #24119).
- Fix restoring hidden top level windows (Christian Walther, #24117).
- Add support for VT_UI8 OLE VARIANT type (Miguel Gimenez, #24115).
- Fix using "Alt" when wxGrid has focus (Dietmar Schwertberger, #24247).

wxOSX:

- Fix clipping when using Sonoma/Xcode 15 SDK (#23916, #24054, #24067, #24073).
- Restore activation for non-bundled applications (#24056, #24062).

wxQt:

- Fix wxAnyButton Current/Normal state confusing (David Karoly, #24129).


3.2.4: (released 2023-11-11)
----------------------------

All:

- Allow creating wxArrays from std::initializer_list (Lotendan, #23966).