@@ -264,6 +264,7 @@ All (GUI):
 - Use wxUILocale in wxFloatProperty (Miguel Gimenez, Artur Wieczorek, #24140).
 - Fix crash in wxImage::InitAlpha() if image is invalid (Randalphwa, #24260).
 - Fix wxLogStatus() when wxNO_IMPLICIT_WXSTRING_ENCODING is defined (#24267).
+- Don't let exceptions escape from event handlers called during idle processing.
 
 wxGTK:
 
